# ml_projects

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml  runpod_config.yaml.example
.claude/: settings.json
.claude/skills/precommit-check/: SKILL.md
babys_first/: Logistic_Regression.ipynb  MNIST_Simple.ipynb
common/: git.py  model_registry.py  modules.py  openmp_guard.py  paths.py
configs/: factorized_single_train.yaml  hierarchical_single_train.yaml  test_smoke.yaml
docs/: store_sales_project.md  store_sales_transformer_notes.md
docs/superpowers/plans/: 2026-07-05-runpod-deployment.md  2026-07-11-lightgbm-ceiling-backtest.md
docs/superpowers/specs/: 2026-07-05-runpod-deployment-design.md  2026-07-11-lightgbm-ceiling-backtest-design.md
intro/: FashionMNIST_Fast.ipynb  Logistic_Regression.ipynb  MNIST_Simple.ipynb  Tensor_Broadcast.ipynb
kaggle/: TimeSeries_StoreSales.ipynb
remote/: __main__.py  cli.py  config.py  environment.py  pod.py  ssh.py  sync.py
scripts/: check.sh  mlflow_gc.sh  start_mlflow.sh
tests/common/: test_model_registry.py  test_modules.py  test_paths.py
tests/remote/: test_cli.py  test_config.py  test_environment.py  test_pod.py  test_ssh.py  test_sync.py
tests/time_series/: conftest.py  test_backtest.py  test_lgbm.py  test_store_sales.py  test_store_sales_encoder_only.py  test_store_sales_factorized.py  test_store_sales_hierarchical.py  test_store_sales_transformer.py  test_store_sales_viz.py  test_tabular.py  test_tune_store_sales_encoder_only.py  test_tune_store_sales_features.py  test_tune_store_sales_robustness.py  test_viz.py
time_series/: StoreSales_Baseline.ipynb  StoreSales_EDA.ipynb  StoreSales_EncoderOnly.ipynb  StoreSales_TransformerBasic.ipynb  TimeSeries_StoreSales.ipynb  main_store_sales_baseline.py  main_store_sales_encoder_only.py  main_store_sales_factorized.py  main_store_sales_hierarchical.py  main_store_sales_lgbm.py  main_store_sales_transformer.py  run_feature_study.py  store_sales.py  store_sales_viz.py  tune_store_sales_encoder_only.py  tune_store_sales_features.py  tune_store_sales_robustness.py  viz.py
time_series/store_sales/: __init__.py  __main__.py  backtest.py  data.py  lgbm.py  models.py  runners.py  tabular.py
