[project]
name = "mlprojects"
version = "0.1.0"
description = "Personal ML learning and practice"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "kaggle>=2.1.2",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=2.2.0,<3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "runpod>=1.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "mlflow-export-import>=1.2.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.5.1",
    "hypothesis>=6.152.9",
    "nbstripout>=0.9.1",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "shellcheck-py>=0.11.0.1",
]
remote = [
    "mlflow>=3.12.0",
    "optuna>=4.9.0",
    "pandas>=2.2.0,<3",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "kaggle>=2.1.2",
]
# torch / torchvision / torchaudio intentionally excluded — provided by RunPod pod image

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E402"]  # E501: line length handled by black; E402: common in notebooks

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = [".venv/*", "tests/*"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = "none"
